<resources>
    <string name="app_name">NFC Tools</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="about">About us</string>
    <string name="management">Management</string>
    <string name="add_category">Add Category</string>
    <string name="stared_cards">Stared Cards</string>
    <string name="all_cards">All Cards</string>
    <string name="cards">Cards</string>
    <string name="to_add_card">Place your card at sensor to add</string>
    <string name="nfc_service">NFC Service</string>
    <string name="aid_group">AID Group</string>

    <string name="donate">Donate (AliPay)</string>
    <string name="nfc_settings">NFC Settings</string>
    <string name="save">Save</string>
    <string name="card_id">Card ID</string>
    <string name="card_name">Title</string>
    <string name="description">Description</string>
    <string name="card_data">Card Data</string>
    <string name="detailed">Detailed</string>
    <string name="brief">Brief</string>
    <string name="read_mode">Scan Mode</string>
    <string name="card_reading_notice">Reading card data…</string>
    <string name="read_fail">Fail reading</string>
    <string name="read_fail_notice">Read exception or unsupported card</string>
    <string name="tech">Tech</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="amount">Amount</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="transaction_country">Transaction Country</string>
    <string name="crypto">Crypto</string>
    <string name="card_detail">Card Detail</string>
    <string name="raw_info">Raw</string>
    <string name="card_info">Card Info</string>
    <string name="transaction">Transaction</string>
    <string name="expire">Expire</string>
    <string name="notice">Notice</string>
    <string name="version_notice">We are working on it, it is coming soon.\nRefer to About Us to support our develop.</string>
    <string name="fail">Fail</string>
    <string name="hce_unsupported">Your device seems not support Host Card Emulation(HCE)</string>
    <string name="card_issuer">Card issuer\n(possible)</string>
    <string name="pin_try_left">Pin try left</string>
    <string name="n_times">%1$d Time(s)</string>
    <string name="card_type">Card type</string>
    <string name="holder_name">Holder name</string>
    <string name="card_aid" translatable="false">Card AID</string>
    <string name="application">Application</string>
    <string name="nfc_not_support_notice">It seems your device doesn\'t support NFC</string>
    <string name="nfc_not_support">NFC Required</string>
    <string name="turn_on_nfc">Turn on NFC</string>
    <string name="nfc_is_needed">Need NFC to scan your card</string>
    <string name="no_more_notice">Never Show Again</string>
    <string name="delete_card_c">Delete Card %1$s ?</string>
    <string name="first_launch_notice">Usage: Hold your NFC card to the back of your phone</string>
    <string name="welcome">Welcome</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="emulate">Emulate</string>
    <string name="stop_emulation">Stop Emulation</string>
    <string name="emulating">Emulating ID</string>
    <string name="saved">Saved</string>
    <string name="emulation_notice">Emulation will JUST ACT AS an NFC ID Card</string>
    <string name="emulation_exited">Emulation exited, config restored, restart NFC to implement</string>
    <string name="press_stop_to_exit_emulation">Tap STOP to exit Emulation</string>
    <string name="more">More</string>
    <string name="delete_shortcut">Delete AppShortcut</string>
    <string name="add_shortcut">Add AppShortcut</string>
    <string name="select_background">Change Background</string>
    <string name="share_card">Share Card</string>
    <string name="too_many_shortcuts">Too many AppShortcuts, delete some and add</string>
    <string name="add_card">Add Card</string>
    <string name="add_shared_card">Add Shared Info</string>
    <string name="share_hint">Share Message</string>
    <string name="invalid_card">Invalid Card</string>
    <string name="correct_add_method">Please paste text created by sharing card</string>
    <string name="invalid_uid">Invalid UID, Can\'t emulate</string>
    <string name="restart_nfc_to_use">Success, please restart NFC</string>
    <string name="emulation_fail">Emulation Fail, unsupported device</string>
    <string name="no_root_no_emulation">No Root Access available, can\'t emulate</string>
    <string name="emulation_state">Emulation State</string>
    <string name="nfc_config_changed">Configuration changed, restart NFC to emulation</string>
    <string name="restart_nfc">Restart NFC</string>
</resources>
