<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item android:title="@string/cards">
        <menu>
            <item
                android:id="@+id/nav_stared_cards"
                android:icon="@drawable/ic_menu_star"
                android:title="@string/stared_cards"/>
            <item
                android:id="@+id/nav_all_cards"
                android:icon="@drawable/ic_menu_wallet"
                android:title="@string/all_cards"/>
        </menu>
    </item>

    <item android:title="@string/management">
        <menu>
            <item android:id="@+id/nav_add_category"
                  android:icon="@drawable/ic_menu_add"
                  android:title="@string/add_category"/>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/settings"/>
        </menu>
    </item>

</menu>
